--- a/configs/segmentation/cityscapes/base.yaml
+++ b/configs/segmentation/cityscapes/base.yaml
@@ -1,9 +1,9 @@
 MODEL:
   BACKBONE:
     NAME: DINOv2
-    VERSION: dinov2_vitl14_reg
+    VERSION: dinov2_vitb14_reg
     FEATURES_TYPE: x_norm_patchtokens
-    INTERM_FEATURES: [1,11,16,23] # Should be either None or list of 4 levels where intermediate features are taken    
+    INTERM_FEATURES: [1,4,8,11] # Should be either None or list of 4 levels where intermediate features are taken    
     FREEZE: True
     LEARNABLE_PARAMS:
       TYPE: mlp
@@ -12,7 +12,7 @@ MODEL:
       OUTPUT_DIM: 512
   SEGMENTATION_HEAD:
     NAME: GMMSegHead
-    EMBEDDING_DIM: 1024 # this should match the output_dim of the backbone, consistency rule is added in the code
+    EMBEDDING_DIM: 256 # this should match the output_dim of the backbone, consistency rule is added in the code
     NUM_CLASSES: 19
     NUM_COMPONENTS_PER_CLASS: 5
     UPDATE_INTERVAL: 5
@@ -40,9 +40,9 @@ SOLVER:
     LR_END: 1.0e-7
     POWER: 1.0
     LAST_EPOCH: -1
-  BATCH_SIZE: 2
+  BATCH_SIZE: 2 # per-gpu, make sure to scale accordingly
   PRECISION: 16
-  MAX_STEPS: 40000
+  MAX_STEPS: 90000
   LOG_EVERY_N_STEPS: 100
   NUM_WORKERS: 12
   VAL_CHECK_INTERVAL: 2000
@@ -52,7 +52,7 @@ SOLVER:
 DATA:
   MODULE: SemanticSegmentation
   NAME: cityscapes
-  DATASET_ROOT: '/scratch/users/nnayal21/hpc_run/datasets/cityscapes'
+  DATASET_ROOT: '/datasets/cityscapes'
   TARGET_TYPE: semantic_trainids
   EVAL_DATASET: cityscapes
 
