--- a/configs/segmentation/ood/d_d.yaml
+++ b/configs/segmentation/ood/d_d.yaml
@@ -1,11 +1,13 @@
 BASE_CONFIG: configs/segmentation/ood/base.yaml
 MODEL:
   OOD_PROJECTOR:
-    TYPE: mlp_multiscale
-    INPUT_DIM: 1024
+    TYPE: mlp
+    INPUT_DIM: 768
     HIDDEN_DIM: 512
     OUTPUT_DIM: 256
     NUM_LAYERS: 3
-    NUM_SCALES: 4
   OOD_HEAD:
+    NAME: LinearHead
+    EMBEDDING_DIM: 256
     NUM_CLASSES: 2
+  SEGMENTOR_CKPT: ckpts/linear-segmentor.ckpt
